--- a/.github/workflows/ci v2.yml
+++ b/.github/workflows/ci v2.yml
@@ -35,6 +35,11 @@ jobs:
     - uses: actions/checkout@v4
       with:
           fetch-depth: 0
+          
+    - name: Install deps
+      if: matrix.config.os == 'ubuntu-latest'
+      run: |
+        pip install jinja2
 
     - name: get conan
       uses: turtlebrowser/get-conan@main
