--- a/.github/workflows/ci v2.yml
+++ b/.github/workflows/ci v2.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Install deps
       if: matrix.config.os == 'ubuntu-latest'
       run: |
-        pip install jinja2
+        pip3 install jinja2
 
     - name: get conan
       uses: turtlebrowser/get-conan@main
