--- a/.github/workflows/ci v2.yml
+++ b/.github/workflows/ci v2.yml
@@ -36,10 +36,8 @@ jobs:
       with:
           fetch-depth: 0
 
-    - name: Install deps
-      if: matrix.config.os == 'ubuntu-latest'
-      run: |
-        pip3 install jinja2
+    - uses: actions/setup-python@v5
+      with: { python-version: "3.8" }
 
     - name: get conan
       uses: turtlebrowser/get-conan@main
