--- a/.github/workflows/ci v2.yml
+++ b/.github/workflows/ci v2.yml
@@ -37,7 +37,8 @@ jobs:
           fetch-depth: 0
 
     - uses: actions/setup-python@v5
-      with: { python-version: "3.8" }
+      with:
+        python-version: '3.6.x - 3.11.x'
 
     - name: get conan
       uses: turtlebrowser/get-conan@main
