try to do macos latest (#692)

--- a/.github/workflows/analyzers.yml
+++ b/.github/workflows/analyzers.yml
@@ -29,6 +29,7 @@ jobs:
       uses: jurplel/install-qt-action@v4
       with:
         cache: true
+        version: "6.2.*"
 
     - name: get conan
       uses: turtlebrowser/get-conan@main
@@ -102,6 +103,7 @@ jobs:
       uses: jurplel/install-qt-action@v4
       with:
         cache: true
+        version: "6.2.*"
 
     - name: get conan
       uses: turtlebrowser/get-conan@main
