--- a/.github/workflows/analyzers.yml
+++ b/.github/workflows/analyzers.yml
@@ -12,7 +12,7 @@ jobs:
   pvs:
     if: github.repository_owner == 'victimsnino' && github.event.workflow_run.conclusion == 'success'
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     timeout-minutes: 10
 
     steps:
@@ -82,7 +82,7 @@ jobs:
         category: PVS-Studio
 
   sonarcloud_and_coverage:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     if: github.repository_owner == 'victimsnino' && github.event.workflow_run.conclusion == 'success'
 
