--- a/.github/workflows/ci v2.yml
+++ b/.github/workflows/ci v2.yml
@@ -21,8 +21,8 @@ jobs:
   cache_deps:
     strategy:
       matrix:
-        config: [{name: ci-ubuntu-gcc,  os: ubuntu-latest},
-                {name: ci-ubuntu-clang, os: ubuntu-latest},
+        config: [{name: ci-ubuntu-gcc,  os: ubuntu-22.04},
+                {name: ci-ubuntu-clang, os: ubuntu-22.04},
                 {name: ci-windows,      os: windows-latest},
                 {name: ci-macos,        os: macos-latest}]
         build_type: [{config: Release}, {config: Debug}]
@@ -81,7 +81,7 @@ jobs:
         sanitizer: ["tsan", "asan", "lsan", "ubsan"]
 
     name: Sanitize - ${{ matrix.sanitizer }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     timeout-minutes: 15
 
     steps:
@@ -136,8 +136,8 @@ jobs:
 
     strategy:
       matrix:
-        config: [{name: ci-ubuntu-gcc,  os: ubuntu-latest},
-                {name: ci-ubuntu-clang, os: ubuntu-latest},
+        config: [{name: ci-ubuntu-gcc,  os: ubuntu-22.04},
+                {name: ci-ubuntu-clang, os: ubuntu-22.04},
                 {name: ci-windows,      os: windows-latest},
                 {name: ci-macos,        os: macos-latest}]
         type: [tests, benchmarks]
@@ -155,7 +155,7 @@ jobs:
 
     # Work around https://github.com/actions/runner-images/issues/8659
     # - name: "Remove GCC 13 from runner image (workaround)"
-    #   if: matrix.config.os == 'ubuntu-latest'
+    #   if: matrix.config.os == 'ubuntu-22.04'
     #   shell: bash
     #   run: |
     #       sudo apt-get update
@@ -168,7 +168,7 @@ jobs:
         key: ${{ matrix.type }}-${{ matrix.config.name }}-${{ matrix.build_type.config }}
 
     - name: Install deps
-      if: matrix.config.os == 'ubuntu-latest'
+      if: matrix.config.os == 'ubuntu-22.04'
       run: |
         sudo apt-get update -q && sudo apt-get install clang-tidy cppcheck -y -q
         pip install pyyaml
@@ -217,7 +217,7 @@ jobs:
 
   docs:
     name: Build Doxygen Docs
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v4
@@ -249,8 +249,8 @@ jobs:
   use_rpp_as_package:
     timeout-minutes: 20
 
-    runs-on: ubuntu-latest
-    name: Test RPP as package - ubuntu-latest
+    runs-on: ubuntu-22.04
+    name: Test RPP as package - ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v4
