--- a/.github/workflows/comment_benchmarks_v2.yml
+++ b/.github/workflows/comment_benchmarks_v2.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   process_benchmarks:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     if: github.repository_owner == 'victimsnino' && github.event.workflow_run.conclusion == 'success'
 
